k8s/python-grpc-server-istio-gateway.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: grpc
      protocol: GRPC
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
    - "*"
  gateways:
  - grpc-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: server
        port:
          number: 9090
    # route:
    # - destination:
    #     host: "server"
    #     port:
    #       # name: grpc
    #       number: 50051
        # subset: v1
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: server
# spec:
#   host: server
#   trafficPolicy:
#     loadBalancer:
#       simple: RANDOM
#   subsets:
#   - name: v1
#     labels:
#       version: v1
